[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Theme/darkred_theme.tres" type="Theme" id=1]
[ext_resource path="res://MiningMaterials/Textures/mat-copper.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/EndMissionScreen/ItemDisplayHB.gd" type="Script" id=3]

[node name="ItemDisplayHB" type="HBoxContainer"]
margin_right = 287.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="ItemName" type="Label" parent="."]
margin_left = 36.0
margin_right = 168.0
margin_bottom = 32.0
size_flags_vertical = 1
theme = ExtResource( 1 )
text = "TestItemName"

[node name="ItemCount" type="Label" parent="."]
margin_left = 172.0
margin_right = 254.0
margin_bottom = 32.0
size_flags_vertical = 1
theme = ExtResource( 1 )
text = "0000000"
